--- a/integration-tests/src/test/resources/application-integration.yml
+++ b/integration-tests/src/test/resources/application-integration.yml
@@ -69,4 +69,7 @@ vitamui_platform_informations:
     zip_code: change-it
     city: change-it
     country: change-it
+  proof_tenant: 10
+  cas_tenant: -1
+  first_customer_tenant: 100
 
