[DLAB-4126] Upgrade deployment (PKI & Ansible scripts)
- Upgrade functions.sh: 
Addition of genericity on the functions allowing to handle a vault file
- Add ERASE as input parameters on PKI's scripts in order to preverse existing items when we execute scripts (add module, clients ...)
- Upgrade generate_stores.sh in order to populate dynamically the linked vault file
- Upgrade packaging in order to add the archive of deployment
- Upgrade scripts according to the PKI in order to clean/fix deployment for keystores/trustores and linked configuration

--- a/deployment/environments/group_vars/all/vault-keystores.yml.example
+++ b/deployment/environments/group_vars/all/vault-keystores.yml.example
@@ -1,27 +1,14 @@
 ---
-
-keystores:
-  server:
-    offer: change-it_817NR75vWsZtgAgJ
-    access_external: change-it_MZFD2YM4279miitu
-    ingest_external: change-it_a2C74cQhy84BLWCr
-    ihm_recette: change-it_4FWYVK1347mxjGfe
-    ihm_demo: change-it_6kQ16eyDY7QPS9fy
-  client_external:
-    ihm_demo: change-it_GT38hhTiA32x1PLy
-    gatling: change-it_2sBC5ac7NfGF9Qj7
-    ihm_recette: change-it_dAZ9Eq65UhDZd9p4
-    reverse: change-it_e5XTzb5yVPcEX464
-    vitam_admin_int: change-it_z6xZe5gDu7nhDZd9
-  client_storage:
-    storage: change-it_647D7LWiyM6qYMnm
-  timestamping:
-    secure_logbook: change-it_Mn9Skuyx87VYU62U
-    secure_storage: change-it_e5gDu9Skuy84BLW9
-truststores:
-  server: change-it_xNe4JLfn528PVHj7
-  client_external: change-it_J2eS93DcPH1v4jAp
-  client_storage: change-it_HpSCa31aG8ttB87S
-grantedstores:
-  client_external: change-it_LL22HkmDCA2e2vj7
-  client_storage: change-it_R3wwp5C8KQS76Vcu
+keystores_server_cas_server: changeme
+keystores_server_iam_external: changeme
+keystores_server_iam_internal: changeme
+keystores_server_reverse: changeme
+keystores_server_security_internal: changeme
+keystores_server_ui_identity: changeme
+keystores_server_ui_identity_admin: changeme
+keystores_server_ui_portal: changeme
+keystores_client_external_customer_x: changeme
+truststores_client_external: changeme
+keystores_client_vitam_vitamui: changeme
+truststores_client_vitam: changeme
+truststores_server: changeme
