--- a/deployment/roles/bootstrap_repo/tasks/main.yml
+++ b/deployment/roles/bootstrap_repo/tasks/main.yml
@@ -4,8 +4,8 @@
 
   - name: create VITAM repositories for CentOS
     template:
-      src: vitam.repo.j2
-      dest: /etc/yum.repos.d/vitam-repositories.repo
+      src: vitamui.repo.j2
+      dest: /etc/yum.repos.d/vitamui-repositories.repo
       owner: root
       group: root
       mode: 0644
@@ -19,8 +19,8 @@
 
   - name: create VITAM repositories for Debian
     template:
-      src: vitam-source-list.j2
-      dest: /etc/apt/sources.list.d/vitam-repositories.list
+      src: vitamui-source-list.j2
+      dest: /etc/apt/sources.list.d/vitamui-repositories.list
       owner: root
       group: root
       mode: 0644
