--- a/deployment/vitamui_apps.yml
+++ b/deployment/vitamui_apps.yml
@@ -1,5 +1,6 @@
 ---
 
+# Internal apps
 - hosts: hosts_vitamui_iam_internal
   gather_facts: no
   any_errors_fatal: true
@@ -7,29 +8,11 @@
     - vitamui
   vars:
     vitamui_struct: "{{ vitamui.iam_internal }}"
-    vitamui_certificate_client_type: "iam"
-    password_keystore: "{{ keystores.server.iam_internal }}"
-    password_manager_keystore: "{{ keystores.server.iam_internal }}"
-    password_truststore_server: "{{ truststores.server }}"
-    password_truststore: "{{ truststores.client_iam }}"
-    other_stores: ["security_internal"]
+    vitamui_certificate_type: "server"
+    password_keystore: "{{ keystores_server_iam_internal }}"
+    password_truststore: "{{ truststores_server }}"
+    vitam_cert: "{{ vitam_certs.vitamui }}"
     consul_tags: "iam-internal, api, internal"
-
-
-- hosts: hosts_vitamui_iam_external
-  gather_facts: no
-  any_errors_fatal: true
-  roles:
-    - vitamui
-  vars:
-    vitamui_struct: "{{ vitamui.iam_external }}"
-    vitamui_certificate_client_type: "iam"
-    password_keystore: "{{ keystores.server.iam_external }}"
-    password_manager_keystore: "{{ keystores.server.iam_external }}"
-    password_truststore_server: "{{ truststores.server }}"
-    password_truststore: "{{ truststores.client_iam }}"
-    other_stores: ["security_internal","iam_internal"]
-    consul_tags: "iam-external, api, external"
 
 - hosts: hosts_vitamui_security_internal
   gather_facts: no
@@ -38,14 +21,23 @@
     - vitamui
   vars:
     vitamui_struct: "{{ vitamui.security_internal }}"
-    password_keystore: "{{ keystores.server.security_internal }}"
-    password_manager_keystore: "{{ keystores.server.security_internal }}"
-    password_truststore_server: "{{ truststores.server }}"
-    vitamui_certificate_client_type: "iam"
-    password_truststore: "{{ truststores.client_iam }}"
-    other_stores: []
+    vitamui_certificate_type: "server"
+    password_keystore: "{{ keystores_server_security_internal }}"
+    password_truststore: "{{ truststores_server }}"
     consul_tags: "security-internal, api, internal"
 
+# External apps
+- hosts: hosts_vitamui_iam_external
+  gather_facts: no
+  any_errors_fatal: true
+  roles:
+    - vitamui
+  vars:
+    vitamui_struct: "{{ vitamui.iam_external }}"
+    vitamui_certificate_type: "external"
+    password_keystore: "{{ keystores_server_iam_external }}"
+    password_truststore: "{{ truststores_client_external }}"
+    consul_tags: "iam-external, api, external"
 
 - hosts: hosts_cas_server
   gather_facts: no
@@ -54,14 +46,12 @@
     - vitamui
   vars:
     vitamui_struct: "{{ vitamui.cas_server }}"
-    password_keystore: "{{ keystores.server.cas_server }}"
-    password_manager_keystore: "{{ keystores.server.cas_server }}"
-    password_truststore_server: "{{ truststores.server }}"
-    vitamui_certificate_client_type: "iam"
-    password_truststore: "{{ truststores.client_iam }}"
-    other_stores: ["iam_external"]
-    consul_tags: "cas-server, cas, internal"
+    vitamui_certificate_type: "external"
+    password_keystore: "{{ keystores_server_cas_server }}"
+    password_truststore: "{{ truststores_client_external }}"
+    consul_tags: "cas-server, cas, external"
 
+#UI
 - hosts: hosts_ui_identity
   gather_facts: no
   any_errors_fatal: true
@@ -69,12 +59,9 @@
     - vitamui
   vars:
     vitamui_struct: "{{ vitamui.identity }}"
-    password_keystore: "{{ keystores.server.ui_identity }}"
-    password_manager_keystore: "{{ keystores.server.ui_identity }}"
-    password_truststore_server: "{{ truststores.server }}"
-    vitamui_certificate_client_type: "iam"
-    password_truststore: "{{ truststores.client_iam }}"
-    other_stores: ["iam_external"]
+    vitamui_certificate_type: "server"
+    password_keystore: "{{ keystores_server_ui_identity }}"
+    password_truststore: "{{ truststores_server }}"
     consul_tags: "ui-identity, ui"
 
 
@@ -85,12 +72,9 @@
     - vitamui
   vars:
     vitamui_struct: "{{ vitamui.portal }}"
-    password_keystore: "{{ keystores.server.ui_portal }}"
-    password_manager_keystore: "{{ keystores.server.ui_portal }}"
-    password_truststore_server: "{{ truststores.server }}"
-    vitamui_certificate_client_type: "iam"
-    password_truststore: "{{ truststores.client_iam }}"
-    other_stores: ["iam_external"]
+    vitamui_certificate_type: "server"
+    password_keystore: "{{ keystores_server_ui_portal }}"
+    password_truststore: "{{ truststores_server }}"
     consul_tags: "ui-portal, ui"
 
 # supposed portlets
@@ -101,10 +85,7 @@
     - vitamui
   vars:
     vitamui_struct: "{{ vitamui.identity_admin }}"
-    password_keystore: "{{ keystores.server.ui_identity_admin }}"
-    password_manager_keystore: "{{ keystores.server.ui_identity_admin }}"
-    password_truststore_server: "{{ truststores.server }}"
-    vitamui_certificate_client_type: "iam"
-    password_truststore: "{{ truststores.client_iam }}"
-    other_stores: ["iam_external"]
+    vitamui_certificate_type: "server"
+    password_keystore: "{{ keystores_server_ui_identity_admin }}"
+    password_truststore: "{{ truststores_server }}"
     consul_tags: "ui-identity-admin, ui"
